<resources>
    <string name="app_name">FeedPost</string>
    // splash screen res
    <string name="proceed">continue</string>
    <string name="earlyTxt">This is an early version , errors are expected</string>

    // string resources
    <string name="useremail">email</string>
    <string name="password">password</string>
    <string name="signin">sign in</string>
    <string name="signup">sign up</string>
    <string name="first">first name</string>
    <string name="last">last name</string>
    <string name="select">select</string>
    <string name="done">next</string>
    <string name="ok">done</string>
    <string name="message">type here . . .</string>

    <string name="Pronounce">(he/she)</string>
    <string name="malePronounce">(he/him)</string>
    <string name="femalePronounce">(she/her)</string>


    <string name="connect">connect</string>
    <string name="disconnect">disconnect</string>
    <string name="follow">follow</string>
    <string name="unfollow">unfollow</string>
    <string name="text">text</string>
    <string name="uploads">uploads</string>
    <string name="Post">Posts</string>
    <string name="logout">logout</string>
    <string name="login">login as</string>
    <string name="Acc..">Account and Preferences</string>

    <string name="account">edit account</string>
    <string name="createPost">Create post</string>
    <string name="save">save changes</string>
    <string name="editProfilePic">edit profile picture</string>
    <string name="editProfileBG">edit profile background</string>
    <string name="editBio">edit profile Bio</string>
    <string name="BioHint">Type to add bio</string>
    <string name="type">Type to add</string>
    <string name="acc..edit..">personalize</string>
    <string name="change..pass">change password</string>
    <string name="acc..verified">get verified</string>
    <string name="acc..active.time">time spent</string>

    <string name="loginas..">To log in as other user\nYou have to sign out from current user</string>
    <string name="confirm">Type confirm</string>
    <string name="alert">Alert</string>

    <string name="feedPost">FeedPost</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="greet">Welcome to FeedPost !</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
</resources>