<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.createAccount">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ImageView
            android:background="@drawable/feedpost"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_margin="@dimen/commonMargin"
            android:padding="@dimen/commonPadding"
            android:background="@drawable/lite_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/firstNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="@dimen/commonMargin"
                android:background="@drawable/transparent_background"
                android:hint="@string/first"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lastNameET"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_background"
                android:hint="@string/last"
                android:layout_marginEnd="12dp"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameETSignUp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:hint="@string/useremail"
                android:inputType="textEmailAddress"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordETSignUp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:padding="12dp"
                android:layout_margin="16dp"
                android:layout_gravity="center"
                android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:background="@drawable/lite_border"
            android:layout_width="100dp"
            android:layout_height="50dp"/>
        <ProgressBar
            android:id="@+id/showLoading"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp"
            android:layout_marginTop="20dp"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:text="@string/signup"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>