<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ash"
    tools:context=".Content.createFeeds">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/transparent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/feedPostIMG"
            android:src="@drawable/photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>
        <ProgressBar
            android:id="@+id/progressImg"
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/feedPostIMGBTN"
            android:text="@string/select"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/feedPostMSG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:padding="8dp"
            android:hint="@string/message"
            android:textColorHint="@color/sky_light_"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/feedPostDONE"
            android:text="@string/done"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>