<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollViewBg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@drawable/titlenight"
    tools:context=".SplashActivities.spalashScreen">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/commonMargin"
            android:layout_width="30dp"
            android:layout_height="30dp"/>
        <ImageView
            android:id="@+id/iconLogo"
            android:src="@drawable/feedpost"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_above="@+id/appName"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:padding="@dimen/commonMargin"
            android:text="@string/app_name"
            android:textColor="@color/green_light"
            android:textSize="25sp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_below="@+id/appName"
            android:id="@+id/consentButton"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/commonMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed"/>
        <TextView
            android:id="@+id/earlyVersionMessege"
            android:textColor="@color/orange"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/commonMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earlyTxt"/>
    </RelativeLayout>
</ScrollView>