<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/users_card_view_gradient"
    tools:context=".OthersProfile.OthersProfileActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/transparent">
        <ProgressBar
            android:id="@+id/profileFetching"
            android:visibility="gone"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_margin="5dp"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/usersProfilePic"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="26dp"
            android:layout_marginStart="26dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="26dp">
            <TextView
                android:id="@+id/usersProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/usersProfileGender"
                android:layout_marginStart="5dp"
                android:textColor="@color/sky"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="36dp"
            android:layout_gravity="center"
            android:background="@color/transparent">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/profileConnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/profileFollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/follow"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/profileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            android:background="@color/transparent">

            <androidx.appcompat.widget.AppCompatButton
                android:text="@string/uploads"
                android:textSize="18sp"
                android:textColor="@color/sky_light_"
                android:background="@drawable/appcompat_button_custom_bg"
                android:layout_margin="14dp"
                android:textAllCaps="false"
                android:layout_width="130dp"
                android:layout_height="70dp"/>
            <!-- Implement a grid view that contains users every uploaded images -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/usersUploadGrid"
                android:layout_margin="10dp"
                android:background="@color/transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>