<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edit_profile_gradient"
    android:fillViewport="true"
    tools:context=".ImageActivity.ImageUploader.ImageUploadForPost">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginStart="@dimen/commonMargin"
            android:layout_marginTop="@dimen/commonMargin"
            android:layout_gravity="center"
            android:onClick="prevTab"
            android:background="@drawable/cancel"
            android:backgroundTint="@color/white"/>
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/commonMargin"
            android:background="@color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/feedpost" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/createPost"
            android:onClick="postPhoto"
            android:layout_below="@+id/header"
            android:text="@string/createPost"
            android:layout_margin="@dimen/commonMargin"
            android:gravity="center"
            android:background="@drawable/lite_border"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_width="120dp"
            android:layout_height="60dp"/>
        <ImageView
            android:id="@+id/preview"
            android:layout_below="@+id/createPost"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/picture"/>
        <ProgressBar
            android:id="@+id/showProgress"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_below="@+id/preview"
            android:layout_margin="@dimen/commonPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/postDescription"
                android:hint="@string/type"
                android:theme="@style/CardView.Light"
                android:layout_marginEnd="140dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:theme="@style/Theme.Material3.Dark"
            android:onClick="selectPhoto"
            android:text="@string/select"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/commonMargin"/>
    </RelativeLayout>
</ScrollView>