<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Account.EditAccount.personalizeProfile">
    <RelativeLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commonMargin"
        android:background="@color/transparent">
        <LinearLayout
            android:id="@+id/contents"
            android:background="@drawable/edit_profile_cards"
            android:layout_margin="@dimen/commonMargin"
            android:padding="@dimen/commonPadding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/commonMargin"
                android:layout_marginTop="@dimen/commonMargin"
                android:layout_marginEnd="@dimen/commonMargin"
                android:padding="@dimen/commonPadding"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="editProfilePic">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/edit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/editProfilePic"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commonText"/>
                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@drawable/pencil"
                        android:backgroundTint="@color/white"
                        android:layout_marginTop="3dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/commonMargin"
                android:layout_marginEnd="@dimen/commonMargin"
                android:padding="@dimen/commonPadding"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="editProfileBackground">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/picture" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/editProfileBG"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commonText"/>
                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@drawable/pencil"
                        android:backgroundTint="@color/white"
                        android:layout_marginTop="3dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:onClick="editUserProfileBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/commonMargin"
                android:layout_marginEnd="@dimen/commonMargin"
                android:padding="@dimen/commonPadding">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/bio"/>
                <TextView
                    android:text="@string/editBio"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/commonText"/>
                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@drawable/pencil"
                        android:backgroundTint="@color/white"
                        android:layout_marginTop="3dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="@dimen/commonMargin"
                android:layout_marginEnd="@dimen/commonMargin"
                android:layout_marginBottom="@dimen/commonMargin"
                android:padding="@dimen/commonPadding"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="editUserPronounce">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:src="@drawable/gender" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/Pronounce"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/commonText"/>
                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@drawable/pencil"
                        android:backgroundTint="@color/white"
                        android:layout_marginTop="3dp"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/bioLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/commonMargin"
            android:layout_marginEnd="@dimen/commonMargin"
            android:layout_marginBottom="@dimen/commonMargin"
            app:counterEnabled="true"
            app:counterMaxLength="150">
            <EditText
                android:id="@+id/userBio"
                android:maxLines="6"
                android:textSize="13sp"
                android:hint="@string/BioHint"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/genderLayout"
            android:visibility="gone"
            android:layout_below="@+id/bioLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/commonMargin"
            android:layout_marginEnd="@dimen/commonMargin"
            android:layout_marginBottom="@dimen/commonMargin"
            android:padding="@dimen/commonPadding"
            android:background="@drawable/lite_border">
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/pronounceSpinner"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:theme="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveChanges"
        android:text="@string/ok"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/commonMargin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="80dp"/>
</RelativeLayout>